web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  labels:
    app: web-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app-deployment
  template:
    metadata:
      labels:
        app: web-app-deployment
    spec:
      containers:
      - name: web-app
        image: registry.digitalocean.com/apoloservices/web-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: web-app-deployment
